# Generic_Pixel-Level_Editing

./: CMakeLists.txt  README.md
images/tonemapping/: MtTamWest.hdr  README.md  StillLife.hdr  Tree.hdr  bigFogMap.hdr  dani_belgium.hdr  dani_synagogue.hdr  memorial.hdr  rosette.hdr
libs/: imageHDR.cpp  imageHDR.h  least-squares-linear-system2.h
libs/Eigen/src/Eigen-stamp/: Eigen-gitclone-lastrun.txt
libs/Eigen/tmp/: Eigen-gitclone.cmake  Eigen-gitupdate.cmake
libs/lib_lsc/: CMakeLists.txt  LSC.cpp  LSC.h
libs/lib_slic/: README.txt  SLIC.cpp  SLIC.h  USAGE_SLIC.txt
src/apps/dehazing/: CMakeLists.txt  dehazing.cc
src/apps/depthoffield/: CMakeLists.txt  depthoffield.cc
src/apps/tonemapping/: CMakeLists.txt  tonemapping.cc
src/denseLabeling/: denseLabeling.cpp  least-squares-linear-system.h  pointline2d.cpp
src/filters/: filter.h  filterdehazing.h  filterdepthoffield.h  filtertonemappingmantiuk.h
src/gui/: imageformats.h  imagemousebrush.h  labelimage.h  multiimageviewer.h  widgetfilter.h  windowfilter.h
src/superpixels/: superpixel.cpp  superpixels.cpp
